# skrivener

./: .env.example  README.md  pyproject.toml  requirements.txt
src/skrivener/: cli.py  color.py
src/skrivener/font/: __init__.py
src/skrivener/image/: typography.py
src/skrivener/zero_mq/: config.py  entry.py  models.py
src/text_to_image/font/: __init__.py
src/text_to_image/image/: typography.py
src/text_to_image/serialization/: image.py
src/text_to_image/zero_mq/: config.py  entry.py  models.py
tests/: client.py
