[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skrivener"
version = "0.0.1-beta"
authors = [{ name = "Benjamin Liden", email = "lidenb@oregonstate.edu" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">3.10"
dependencies = [
    "pillow", 
    "pydantic >= 2", 
    "pydantic-settings >= 2",
    "zmq"
]

[project.urls]
Homepage = "https://github.com/bcliden/skrivener"
Issues = "https://github.com/bcliden/skrivener/issues"

[tool.setuptools.package-data]
"skrivener.font" = ["*.ttf"]

[project.scripts]
"skrivener" = "skrivener.zero_mq.entry:main"

[project.gui-scripts]
# maybe just here
